# server/src/controller/UserController.ts
@@ -1,18 +1,18 @@
 import * as express from 'express'
 import BaseController from './BaseController';
+import UserService from '../service/UserService';
 import User from '../model/User'
+import Init from '../Init'
 import { v4 as uuid } from 'uuid';
+
 
 
 class UserController implements BaseController {
 
 
-    public users: Map<string, User>;
+    private userServic: UserService = Init.userService;
 
     constructor() {
-        this.users = new Map<string, User>();
-        this.users['forsrc'] = { username: "forsrc", role: ['ROLE_USER', 'ROLE_ADMIN'] };
-        this.users['user'] = { username: "user", role: ['ROLE_USER', 'ROLE_DEV'] };
         this.list = this.list.bind(this);
         this.save = this.save.bind(this);
         this.get = this.get.bind(this);
@@ -21,65 +21,72 @@ class UserController implements BaseController {
     }
 
     list(req: express.Request, res: express.Response): void {
-        console.log(this.users);
-        res.json(this.users);
+        this.userServic.list().then((rows) => {
+            res.status(200).json(rows);
+        }).catch((err) => {
+            res.status(400).json({ error: err });
+        });
+
     }
 
 
     save(req: express.Request, res: express.Response): void {
-        try {
-            let user: User = {} as User;
-            Object.assign(user, req.body)
-            const newUUID = uuid();
-            this.users[newUUID] = user;
-            res.json({
-                uuid: newUUID
-            })
-        } catch (e) {
-            res.status(400).send(JSON.stringify({ "error": "problem with posted data" }));
-        }
+
+        let user: User = {} as User;
+        Object.assign(user, req.body)
+        console.log("---->", user)
+        this.userServic.save(user).then((status) => {
+            res.status(200).json({ user: user, status: status });
+        }).catch((err) => {
+            res.status(400).json({ error: err });
+        });
+
     }
 
 
     get(req: express.Request, res: express.Response) {
-        console.log(req.params.username);
-        if (!!this.users[req.params.username]) {
-            res.json({
-                user: this.users[req.params.username]
-            })
-        } else {
-            res.status(404).send(JSON.stringify({ "error": "no such user" }));
-        }
+        let username: string = req.params.username;
+
+        this.userServic.get({ username: username }).then((one) => {
+            if (one) {
+                res.status(200).json({ user: one });
+            } else {
+                res.status(404).json({ error: `no such user '${username}'` });
+            }
+
+
+        }).catch((err) => {
+            res.status(400).json({ "error": err });
+        });
+
     }
 
 
     update(req: express.Request, res: express.Response) {
-        try {
-            if (!!this.users[req.params.username]) {
-                let user: User = {} as User;
-                Object.assign(user, req.body)
-                this.users[req.params.username] = user;
-                res.json({
-                    cat: this.users[req.params.username]
-                })
+        let username: string = req.params.username;
+        let user: User = {} as User;
+        Object.assign(user, req.body)
+
+        this.userServic.update({ username: username }, user).then((status) => {
+            if (status) {
+                res.status(200).json({ user: user, status: status });
             } else {
-                res.status(404).send(JSON.stringify({ "error": "no such user" }));
+                res.status(404).json({ error: `no such user '${username}'` });
             }
-        } catch (e) {
-            res.status(400).send(JSON.stringify({ "error": "problem with posted data" }));
-        }
+
+        }).catch((err) => {
+            res.status(400).json({ "error": err });
+        });
     }
 
 
     delete(req: express.Request, res: express.Response) {
-        if (!!this.users[req.params.username]) {
-            delete this.users[req.params.username]
-            res.json({
-                uuid: req.params.username
-            })
-        } else {
-            res.status(404).send(JSON.stringify({ "error": "no such user" }));
-        }
+        let username: string = req.params.username;
+        this.userServic.delete({ username: username }).then((status) => {
+            res.status(200).json({ message: `'${username}' is deleted.` });
+        }).catch((err) => {
+            res.status(400).json({ "error": err });
+        });
     }
 }
 
